--- a/package.json
+++ b/package.json
@@ -9,19 +9,20 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@ai-sdk/google": "^1.2.19",
     "@elevenlabs/react": "^0.1.7",
     "@expo/metro-runtime": "~5.0.4",
     "expo": "~53.0.13",
     "expo-battery": "~9.1.4",
     "expo-brightness": "~13.1.4",
     "expo-dev-client": "~5.2.2",
+    "expo-linear-gradient": "~14.1.5",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.4",
     "react-native-web": "^0.20.0",
-    "react-native-webview": "13.13.5",
-    "expo-linear-gradient": "~14.1.5"
+    "react-native-webview": "13.13.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
