Add lucide-react-native dependency

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "expo-dev-client": "~5.2.2",
     "expo-linear-gradient": "~14.1.5",
     "expo-status-bar": "~2.2.3",
+    "lucide-react-native": "^0.468.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.4",
