--- a/package.json
+++ b/package.json
@@ -21,12 +21,11 @@
     "expo-linear-gradient": "~14.1.5",
     "expo-status-bar": "~2.2.3",
     "lucide-react-native": "^0.468.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-native": "0.74.0",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "react-native": "0.79.4",
     "react-native-web": "^0.20.0",
-    "react-native-webview": "13.13.5",
-    "zod": "^3.22.0"
+    "react-native-webview": "13.13.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
