--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "expo-status-bar": "~2.2.3",
     "lucide-react-native": "^0.468.0",
     "react": "19.1.0",
-    "react-dom": "19.0.0",
+    "react-dom": "^19.0.0",
     "react-native": "0.79.4",
     "react-native-web": "^0.20.0",
     "react-native-webview": "13.13.5"
