Fix expo doctor issues

--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
     "name": "understand.me",
-    "slug": "understand.me",
+    "slug": "understand-me",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
