--- a/package.json
+++ b/package.json
@@ -32,5 +32,12 @@
     "@types/react": "~19.0.10",
     "typescript": "~5.8.3"
   },
+  "expo": {
+    "doctor": {
+      "reactNativeDirectoryCheck": {
+        "listUnknownPackages": false
+      }
+    }
+  },
   "private": true
 }
