--- a/app.json
+++ b/app.json
@@ -30,7 +30,12 @@
       ]
     },
     "web": {
-      "favicon": "./assets/favicon.png"
-    }
+      "favicon": "./assets/favicon.png",
+      "output": "server"
+    },
+    "plugins": [
+      "expo-router"
+    ],
+    "scheme": "understand-me"
   }
 }
