--- a/package.json
+++ b/package.json
@@ -1,43 +1,52 @@
 {
-	"name": "understand.me",
-	"version": "1.0.0",
-	"main": "index.ts",
-	"scripts": {
-		"start": "expo start",
-		"dev": "expo start --dev-client",
-		"android": "expo start --android",
-		"ios": "expo start --ios",
-		"web": "expo start --web"
-	},
-	"dependencies": {
-		"@ai-sdk/google": "^1.2.19",
-		"@elevenlabs/react": "^0.1.7",
-		"@expo/metro-runtime": "~5.0.4",
-		"ai": "^4.3.16",
-		"expo": "~53.0.13",
-		"expo-battery": "~9.1.4",
-		"expo-brightness": "~13.1.4",
-		"expo-dev-client": "~5.2.2",
-		"expo-linear-gradient": "~14.1.5",
-		"expo-status-bar": "~2.2.3",
-		"lucide-react-native": "^0.525.0",
-		"react": "19.1.0",
-		"react-dom": "^19.1.0",
-		"react-native": "0.79.4",
-		"react-native-web": "^0.20.0",
-		"react-native-webview": "13.13.5"
-	},
-	"devDependencies": {
-		"@babel/core": "^7.27.7",
-		"@types/react": "~19.1.8",
-		"typescript": "~5.8.3"
-	},
-	"expo": {
-		"doctor": {
-			"reactNativeDirectoryCheck": {
-				"listUnknownPackages": false
-			}
-		}
-	},
-	"private": true
+  "name": "understand.me",
+  "version": "1.0.0",
+  "main": "index.ts",
+  "scripts": {
+    "start": "expo start",
+    "dev": "expo start --dev-client",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
+    "web": "expo start --web"
+  },
+  "dependencies": {
+    "@ai-sdk/google": "^1.2.19",
+    "@elevenlabs/react": "^0.1.7",
+    "@expo-google-fonts/inter": "^0.2.3",
+    "@expo/metro-runtime": "~5.0.4",
+    "@supabase/supabase-js": "^2.39.0",
+    "ai": "^4.3.16",
+    "expo": "~53.0.13",
+    "expo-av": "~14.1.5",
+    "expo-battery": "~9.1.4",
+    "expo-brightness": "~13.1.4",
+    "expo-dev-client": "~5.2.2",
+    "expo-font": "~12.1.5",
+    "expo-linear-gradient": "~14.1.5",
+    "expo-router": "~4.0.17",
+    "expo-splash-screen": "~0.29.15",
+    "expo-status-bar": "~2.2.3",
+    "lucide-react-native": "^0.525.0",
+    "react": "19.1.0",
+    "react-dom": "^19.1.0",
+    "react-native": "0.79.4",
+    "react-native-gesture-handler": "~2.20.2",
+    "react-native-reanimated": "~3.16.1",
+    "react-native-web": "^0.20.0",
+    "react-native-webview": "13.13.5",
+    "zustand": "^5.0.2"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.27.7",
+    "@types/react": "~19.1.8",
+    "typescript": "~5.8.3"
+  },
+  "expo": {
+    "doctor": {
+      "reactNativeDirectoryCheck": {
+        "listUnknownPackages": false
+      }
+    }
+  },
+  "private": true
 }
