--- a/package.json
+++ b/package.json
@@ -17,28 +17,28 @@
     "@supabase/supabase-js": "^2.39.0",
     "ai": "^4.3.16",
     "expo": "~53.0.13",
-    "expo-av": "~14.1.5",
-    "expo-battery": "~9.1.4",
-    "expo-brightness": "~13.1.4",
-    "expo-dev-client": "~5.2.2",
-    "expo-font": "~12.1.5",
-    "expo-linear-gradient": "~14.1.5",
+    "expo-av": "~14.0.7",
+    "expo-battery": "~9.0.4",
+    "expo-brightness": "~12.0.4",
+    "expo-dev-client": "~5.0.4",
+    "expo-font": "~12.0.10",
+    "expo-linear-gradient": "~13.0.2",
     "expo-router": "~4.0.17",
     "expo-splash-screen": "~0.29.15",
-    "expo-status-bar": "~2.2.3",
+    "expo-status-bar": "~2.0.0",
     "lucide-react-native": "^0.525.0",
-    "react": "19.1.0",
-    "react-dom": "^19.1.0",
-    "react-native": "0.79.4",
-    "react-native-gesture-handler": "~2.20.2",
-    "react-native-reanimated": "~3.16.1",
-    "react-native-web": "^0.20.0",
-    "react-native-webview": "13.13.5",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-native": "0.74.2",
+    "react-native-gesture-handler": "~2.16.1",
+    "react-native-reanimated": "~3.10.1",
+    "react-native-web": "~0.19.10",
+    "react-native-webview": "13.8.6",
     "zustand": "^5.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.27.7",
-    "@types/react": "~19.1.8",
+    "@types/react": "~18.2.79",
     "typescript": "~5.8.3"
   },
   "expo": {
