--- a/package.json
+++ b/package.json
@@ -10,36 +10,36 @@
 		"web": "expo start --web"
 	},
 	"dependencies": {
-		"@ai-sdk/google": "latest",
-		"@elevenlabs/react": "latest",
-		"@expo-google-fonts/inter": "latest",
-		"@expo/metro-runtime": "latest",
-		"@supabase/supabase-js": "latest",
-		"ai": "latest",
-		"expo": "latest",
-		"expo-av": "latest",
-		"expo-battery": "latest",
-		"expo-brightness": "latest",
-		"expo-dev-client": "latest",
-		"expo-font": "latest",
-		"expo-linear-gradient": "latest",
-		"expo-router": "latest",
-		"expo-splash-screen": "latest",
-		"expo-status-bar": "latest",
-		"lucide-react-native": "latest",
-		"react": "latest",
-		"react-dom": "latest",
-		"react-native": "latest",
-		"react-native-gesture-handler": "latest",
-		"react-native-reanimated": "latest",
-		"react-native-web": "latest",
-		"react-native-webview": "latest",
-		"zustand": "latest"
+		"@ai-sdk/google": "^1.2.19",
+		"@elevenlabs/react": "^0.1.7",
+		"@expo-google-fonts/inter": "^0.4.1",
+		"@expo/metro-runtime": "~5.0.4",
+		"@supabase/supabase-js": "^2.50.2",
+		"ai": "^4.3.16",
+		"expo": "~53.0.13",
+		"expo-av": "~15.1.6",
+		"expo-battery": "~9.1.4",
+		"expo-brightness": "~13.1.4",
+		"expo-dev-client": "~5.2.2",
+		"expo-font": "~13.3.1",
+		"expo-linear-gradient": "~14.1.5",
+		"expo-router": "~5.1.1",
+		"expo-splash-screen": "~0.30.9",
+		"expo-status-bar": "~2.2.3",
+		"lucide-react-native": "^0.525.0",
+		"react": "19.1.0",
+		"react-dom": "19.1.0",
+		"react-native": "0.74.7",
+		"react-native-gesture-handler": "~2.26.0",
+		"react-native-reanimated": "~3.16.7",
+		"react-native-web": "~0.20.0",
+		"react-native-webview": "13.15.0",
+		"zustand": "^5.0.6"
 	},
 	"devDependencies": {
-		"@babel/core": "latest",
-		"@types/react": "latest",
-		"typescript": "latest"
+		"@babel/core": "^7.27.7",
+		"@types/react": "~19.1.8",
+		"typescript": "~5.8.3"
 	},
 	"expo": {
 		"doctor": {
