--- a/package.json
+++ b/package.json
@@ -39,8 +39,8 @@
 		"expo-splash-screen": "^0.30.9",
 		"expo-status-bar": "^2.2.3",
 		"lucide-react-native": "^0.525.0",
-		"react": "19.1.0",
-		"react-dom": "19.1.0",
+		"react": "18.2.0",
+		"react-dom": "18.2.0",
 		"react-native": "0.74.7",
 		"react-native-gesture-handler": "^2.26.0",
 		"react-native-reanimated": "^3.18.0",
@@ -53,7 +53,7 @@
 	},
 	"devDependencies": {
 		"@babel/core": "^7.27.7",
-		"@types/react": "18.2.6",
+		"@types/react": "~18.2.14",
 		"typescript": "^5.8.3"
 	},
 	"expo": {
