--- a/package.json
+++ b/package.json
@@ -32,8 +32,8 @@
 		"expo-file-system": "^18.1.10",
 		"expo-font": "^13.3.1",
 		"expo-image-picker": "^16.1.4",
-		"expo-media-library": "^17.1.7",
 		"expo-linear-gradient": "^14.1.5",
+		"expo-media-library": "^17.1.7",
 		"expo-router": "^5.1.1",
 		"expo-splash-screen": "^0.30.9",
 		"expo-status-bar": "^2.2.3",
@@ -53,6 +53,7 @@
 	"devDependencies": {
 		"@babel/core": "^7.27.7",
 		"@types/react": "19.1.8",
+		"babel-plugin-module-resolver": "^5.0.2",
 		"typescript": "^5.8.3"
 	},
 	"expo": {
